Add test commands for Firefox and WebKit

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test:ui": "npx playwright test tests/ui",
     "test:headed": "npx playwright test --headed",
     "test:chrome": "npx playwright test --project=chrome",
+     "test:chrome": "npx playwright test --project=firefox",
+     "test:chrome": "npx playwright test --project=webkit",
     "report": "npx playwright show-report",
     "trace": "npx playwright show-trace"
   },
